# ml-container

./: Dockerfile  pyproject.toml
src/ml_container/: app.py
